2008-03-29  ARAKI Yasuhiro  <ar@debian.org>

	* app/models/article.rb (Article::self.search): Change to search by body and title columns.

2008-03-22  ARAKI Yasuhiro  <ar@debian.org>

	* donrails/tool/update-custom.sh (DOTDONRAILS): Change to use DOTDONRAILS.

2008-03-21  ARAKI Yasuhiro  <ar@debian.org>

	** CHANGE to apply for rails-2.0.2. Various files, directories and svn external repositories are changed.

	* db/migrate/004_modify_categories_lft.rb: New for vendor/plugin/apply acts_as_nested_set.

2008-03-20  ARAKI Yasuhiro  <ar@debian.org>

	* app/controllers/notes_controller.rb: change render_text to render :text.

2008-03-19  ARAKI Yasuhiro  <ar@debian.org>

	* app/models/don_ping.rb (DonPing): add to load 'xmlrpc'.

2008-03-18  ARAKI Yasuhiro  <ar@debian.org>

	* Updated backgroundrb. Please INSTALL packet by 'gem install packet'.

2008-01-27  ARAKI Yasuhiro  <ar@debian.org>

	* app/views/admin/system/manage_don_env.rhtml: Add 'add_clips_id' and 'default_format'.
	* app/views/shared/default/comment2.rhtml: likewise.
	* app/views/shared/default/comment-enrollment.rhtml: likewise. 
	* app/controllers/admin/system_controller.rb (Admin::add_don_env): likewise.
	* app/views/admin/shared/edit_don_env.rhtml (default_format): likewise.

	* db/migrate/003_add_clips_id.rb (AddClipsId): new file.

	* app/controllers/admin/article_controller.rb (Admin::new_article): Change to set default format by DonEnv.default_format.

2008-01-26  ARAKI Yasuhiro  <ar@debian.org>

	* doc/HowToLogrotate.wiki: New file.

2008-01-08  ARAKI Yasuhiro  <ar@debian.org>

	* app/models/comment_mailer.rb (CommentMailer::notify): Fix to link HTML URL. (fix issue #66)

	* app/views/atom/feed.rxml: Fix to link HTML URL.(fix issue #67)

2008-01-04  ARAKI Yasuhiro  <ar@debian.org>

	* doc/InstallByFulldist.wiki: Copy from ../INSTALL.

2007-12-25  ARAKI Yasuhiro  <ar@debian.org>

	* test/unit/author_test.rb (AuthorTest::test_authenticate): New test method.

2007-12-23  ARAKI Yasuhiro  <ar@debian.org>