@@ -1,3 +1,7 @@
+2008-04-02  ARAKI Yasuhiro  <ar@debian.org>
+
+	* app/views/admin/article/delete_article.rhtml: new file.
+
 2008-03-29  ARAKI Yasuhiro  <ar@debian.org>
 
 	* app/models/article.rb (Article::self.search): Change to search by body and title columns.
